--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Email</title>
 </head>
 <body>
-    <p> <img src="http://mnsstrap.ddns.net:5000/download/client7_2c056cf6.png"></img>
-        </p>
-        
+   <p>sdghsdgjh</p>
+    <img src="https://i.ytimg.com/vi/ovsz1ZoeTWQ/maxresdefault.jpg"></img>
 </body>
 </html>
